# fastrust

./: Cargo.toml  README.md
src/: app.rs  error.rs  lib.rs  main.rs  middleware.rs  path.rs  route.rs  router.rs  utils.rs
src/app/: builder.rs  mod.rs  openapi.rs  server.rs  swagger.rs
src/docs_generator/: converter.rs  generator.rs  mod.rs
src/extractor/: inspect.rs  kind.rs  mod.rs
src/inspector/: extractor.rs  inspection.rs  mod.rs
src/middleware/: log_request.rs  mod.rs
src/openapi/: converter.rs  generator.rs  mod.rs
src/routing/: mod.rs  openapi_converter.rs  route.rs  route_config.rs  router.rs  temp
