[package]
name = "fastrust"
version = "0.1.0"
edition = "2024"
description = "A lightweight API framework built on top of Axum, inspired by FastAPI"
license = "MIT"
repository = "https://github.com/NovaH00/fastrust"
readme = "README.md"
keywords = ["web", "framework", "axum", "api"]
categories = ["web-programming"]

[dependencies]
axum = "0.8.8"
log = "0.4.29"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"]}
